--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
   "require": {
     "php": ">=7.1",
     "guzzlehttp/guzzle": "^6.2",
+    "psr/log": "^1.0",
     "tightenco/collect": "^5.4"
   },
   "require-dev": {
