--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,14 @@
     "php": ">=7.1",
     "guzzlehttp/guzzle": "^6.2",
     "psr/log": "^1.0",
-    "tightenco/collect": "^5.4"
+    "tightenco/collect": "5.*"
   },
   "require-dev": {
     "fzaninotto/faker": "^1.6",
     "illuminate/cache": "^5.5",
     "larapack/dd": "^1.1",
     "mockery/mockery": "~1.0",
-    "phpunit/phpunit": "^6.0",
-    "sllh/php-cs-fixer-styleci-bridge": "^2.1"
+    "phpunit/phpunit": "^6.0"
   },
   "autoload": {
     "psr-4": {
