--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: php
 
 php:
   - 7.1
+  - 7.2
 
 sudo: false
 
@@ -11,6 +12,6 @@ cache:
   - $HOME/.composer/cache
 
 before_script:
-  - COMPOSER_DISCARD_CHANGES=1 composer install --prefer-dist --no-interaction
+  - COMPOSER_DISCARD_CHANGES=1 composer install --prefer-dist --no-progress --no-interaction
 script:
   - vendor/bin/phpunit --stop-on-failure tests/
