--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,8 @@
   "require": {
     "php": "^7.1",
     "guzzlehttp/guzzle": "^6.2",
+    "symfony/property-access": "^4.1",
+    "symfony/serializer": "^4.1",
     "tightenco/collect": "5.*"
   },
   "require-dev": {
