--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "require": {
     "php": "^7.1",
+    "ext-json": "*",
     "guzzlehttp/guzzle": "^6.2",
     "symfony/property-access": "^4.1",
     "symfony/serializer": "^4.1",
@@ -11,10 +12,10 @@
   },
   "require-dev": {
     "fzaninotto/faker": "^1.6",
-    "illuminate/cache": "^5.5",
+    "illuminate/cache": "5.6.*",
     "larapack/dd": "^1.1",
     "mockery/mockery": "^1.0",
-    "phpunit/phpunit": "^6.0"
+    "phpunit/phpunit": "^7.0"
   },
   "autoload": {
     "psr-4": {
